[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI_elements/banner_2.png" type="Texture2D" id=1]
[ext_resource path="res://UI_elements/close_button_normal.png" type="Texture2D" id=2]
[ext_resource path="res://UI_elements/close_button_pressed.png" type="Texture2D" id=3]
[ext_resource path="res://UI_elements/button_pressed.png" type="Texture2D" id=4]
[ext_resource path="res://UI_elements/button_normal.png" type="Texture2D" id=5]
[ext_resource path="res://Font/Roboto-Regular.ttf" type="FontFile" id=6]
[ext_resource path="res://EnchantConfirmWindow.gd" type="Script" id=7]
[ext_resource path="res://UI_elements/square.png" type="Texture2D" id=8]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="Theme" id=2]
ProgressBar/styles/fg = SubResource( 6 )

[sub_resource type="FontFile" id=5]
size = 10
use_filter = true
font_data = ExtResource( 6 )

[node name="EnchantConfirmWindow" type="Control"]
custom_minimum_size = Vector2( 300, 200 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/VBoxContainer"]
offset_right = 300.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 0, 30 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Header" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header"]
offset_right = 96.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 96, 0 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 100, 0 )
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "ENCHANT"
align = 1
valign = 1

[node name="Control2" type="Control" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header"]
offset_left = 204.0
offset_right = 300.0
offset_bottom = 30.0
size_flags_horizontal = 3

[node name="Exit" type="TextureButton" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header/Control2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_bottom = 15.0
custom_minimum_size = Vector2( 30, 30 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer"]
offset_top = 34.0
offset_right = 300.0
offset_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/VBoxContainer"]
offset_top = 9.0
offset_right = 300.0
offset_bottom = 59.0
custom_minimum_size = Vector2( 0, 50 )
alignment = 1

[node name="TextureProgress4" type="TextureProgressBar" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer"]
material = SubResource( 1 )
offset_left = 31.0
offset_right = 121.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 90, 50 )
theme = SubResource( 2 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="Tween" type="Tween" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer/TextureProgress4"]

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 125.0
offset_right = 175.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 0 )
texture = ExtResource( 1 )
expand = true

[node name="ItemRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 25, 25 )
expand = true

[node name="TextureProgress3" type="TextureProgressBar" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer"]
show_behind_parent = true
material = SubResource( 1 )
offset_left = 179.0
offset_right = 269.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 90, 50 )
pivot_offset = Vector2( 45, 25 )
theme = SubResource( 2 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 8 )
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="Tween" type="Tween" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer/TextureProgress3"]

[node name="NinePatchRect3" type="NinePatchRect" parent="NinePatchRect/VBoxContainer"]
offset_top = 106.0
offset_right = 300.0
offset_bottom = 166.0
custom_minimum_size = Vector2( 0, 60 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect3"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect3/VBoxContainer"]
offset_right = 300.0
offset_bottom = 3.0
custom_minimum_size = Vector2( 0, 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/VBoxContainer/NinePatchRect3/VBoxContainer"]
offset_top = 7.0
offset_right = 300.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 0, 30 )
size_flags_horizontal = 3
theme_override_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
text = "[center] Nellie will try to enchant your item. This is done by sacrificing three items to the God of Shadows, Zyphyris. [/center]"
text = " Nellie will try to enchant your item. This is done by sacrificing three items to the God of Shadows, Zyphyris. "

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect3/VBoxContainer"]
offset_top = 41.0
offset_right = 300.0
offset_bottom = 55.0
text = "The success rate is "
align = 1
valign = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "SUCCESS"
align = 1
valign = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect/VBoxContainer"]
offset_top = 170.0
offset_right = 300.0
offset_bottom = 200.0
custom_minimum_size = Vector2( 0, 30 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Confirm" type="TextureButton" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons"]
offset_left = 61.0
offset_right = 131.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 70, 0 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Confirm"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons"]
offset_left = 135.0
offset_right = 165.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 30, 0 )

[node name="Cancel" type="TextureButton" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons"]
offset_left = 169.0
offset_right = 239.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 70, 0 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Cancel"
align = 1
valign = 1

[connection signal="button_up" from="NinePatchRect/VBoxContainer/NinePatchRect/Header/Control2/Exit" to="." method="_on_Exit_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Confirm" to="." method="_on_Confirm_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Cancel" to="." method="_on_Cancel_button_up"]
